--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-mentions
   - jemoji
+markdown: kramdown
+kramdown:
+   syntax_highlighter_opts:
+      disable : true
