--- a/dotnet/solutions/09-Troubleshooting/09-Troubleshooting.csproj
+++ b/dotnet/solutions/09-Troubleshooting/09-Troubleshooting.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="22.0.8" />
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0.18-preview" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
