--- a/dotnet/solutions/10-OptimisticConcurrency/10-OptimisticConcurrency.csproj
+++ b/dotnet/solutions/10-OptimisticConcurrency/10-OptimisticConcurrency.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0.18-preview" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
