--- a/dotnet/setup/templates/Lab05/Lab05.csproj
+++ b/dotnet/setup/templates/Lab05/Lab05.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0.18-preview" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
