--- a/dotnet/setup/templates/Lab09/Lab09.csproj
+++ b/dotnet/setup/templates/Lab09/Lab09.csproj
@@ -8,6 +8,6 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Bogus" Version="22.0.8" />
-        <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0.18-preview" />
+        <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0" />
     </ItemGroup>
 </Project>
