--- a/dotnet/setup/templates/Lab10/Lab10.csproj
+++ b/dotnet/setup/templates/Lab10/Lab10.csproj
@@ -7,6 +7,6 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0.18-preview" />
+        <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0" />
     </ItemGroup>
 </Project>
