--- a/dotnet/setup/templates/Lab08/DataGenerator/DataGenerator.csproj
+++ b/dotnet/setup/templates/Lab08/DataGenerator/DataGenerator.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="27.0.1" />
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0.18-preview" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
