--- a/dotnet/solutions/08-change_feed_with_azure_Functions/ChangeFeedConsole/ChangeFeedConsole.csproj
+++ b/dotnet/solutions/08-change_feed_with_azure_Functions/ChangeFeedConsole/ChangeFeedConsole.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0.18-preview" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
