--- a/dotnet/solutions/08-change_feed_with_azure_Functions/ChangeFeedFunctions/ChangeFeedFunctions.csproj
+++ b/dotnet/solutions/08-change_feed_with_azure_Functions/ChangeFeedFunctions/ChangeFeedFunctions.csproj
@@ -4,7 +4,7 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0.18-preview" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0" />
     <PackageReference Include="Microsoft.Azure.EventHubs" Version="3.0.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.CosmosDB" Version="3.0.3" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
