--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: 'Azure Cosmos DB Workshop'
 description: 'This series of workshops will give you hands-on experience working with Azure Cosmos DB using the SQL API'
-remote_theme: timsander1/cosmos-theme
+remote_theme: azure-immersion/cosmos-jekyll-theme
 exclude:
   - .build/
   - .circleci/
