--- a/dotnet/solutions/01-CreatingMultiPartition/01-CreatingMultiPartition.csproj
+++ b/dotnet/solutions/01-CreatingMultiPartition/01-CreatingMultiPartition.csproj
@@ -8,7 +8,7 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Bogus" Version="22.0.8" />
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0" />
+    <PackageReference Include="Bogus" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" />
   </ItemGroup>
 </Project>
