--- a/dotnet/solutions/05-build_net_app/05-QueryWithNet.csproj
+++ b/dotnet/solutions/05-build_net_app/05-QueryWithNet.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" />
   </ItemGroup>
 
 </Project>
