--- a/dotnet/solutions/07-authoring-stored-procedures-with-continuation/07-MultiDocTransactions.csproj
+++ b/dotnet/solutions/07-authoring-stored-procedures-with-continuation/07-MultiDocTransactions.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bogus" Version="22.0.8" />
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0" />
+    <PackageReference Include="Bogus" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" />
   </ItemGroup>
 
 </Project>
